--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Upload File</title>
 </head>
 <body>
-    <form method="post" enctype="multipart/form-data" action="/api/v1/upload">
+    <form method="post" enctype="multipart/form-data" action="/api/upload">
         <input name="file" type="file"></input>
         <button type="submit">Upload File</button>
     </form>
